# Order-Processing-Analyzer

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/core/: api.py  exepcions.py  utils.py  validators.py
src/app/logs/: loger.py
